--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <i class="fab fa-twitter"></i>
             <span>Twitter</span>
           </a>
-          <a href="https://www.instagram.com/aakash_37" target="_blank"class="social-button email">
+          <a href="https://www.instagram.com/_aakash_37_" target="_blank"class="social-button email">
             <i class="fa-brands fa-instagram"></i>
             <span>Instagram</span>
           </a>
@@ -81,7 +81,7 @@
             <i class="fab fa-twitter"></i>
             <span>Twitter</span>
           </a>
-          <a href="https://www.instagram.com/aakash_37" target="_blank"class="social-button email">
+          <a href="https://www.instagram.com/_aakash_37_" target="_blank"class="social-button email">
             <i class="fa-brands fa-instagram"></i>
             <span>Instagram</span>
           </a>
