--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
       
 
     <section class="contact">
-      <form>
+      <form action="https://formspree.io/f/moverrqn" method="POST" >
         <h1>Message Me</h1>
         <div class="input-row">
-          <input type="text" placeholder="Your Name" required />
-          <input type="email" placeholder="Your Email" required />
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email"  name="email" placeholder="Your Email" required />
         </div>
-        <textarea placeholder="Your Message" required></textarea>
+        <textarea placeholder="Your Message" name="message" required></textarea>
         <button type="submit">Send Message</button>
       </form>
     </section>
