--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <hr />
           <div class="hero-row">
             <p>A cybersecurity enthusiast with a strong passion for technology and a solid foundation in understanding and addressing modern digital challenges.</p>
-            <div class="resume-btn-tablet"><a href="Assets/resume.pdf" class="hero-btn" target="_blank">Download Resume</a>
+            <div class="resume-btn-tablet"><a href="resume.pdf" class="hero-btn" target="_blank">Download Resume</a>
             </div>
           </div>
           <div class="resume-btn-mobile">
